tests/errors/syntax_error.bas
10 PRINT "Valid line"
20 INVALID_COMMAND
30 PRINT "Another valid line"